--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
                     </a>
                 </div>
             </div>
-            <p>
+            <p class="pmargin">
                 PROJECT
             </p>
             <div id="myprojectsection">
