--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </a>
     
-                    <a href="#" target="_blank">
+                    <a href="https://seojaeohcode.github.io/" target="_blank">
                         <div class="item">
                             <div class="card">
                                 <div class="imagesection">
