--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,41 @@
             </p>
             <div id="myprojectsection">
                 <div class="row">
+                    <a href="#" target="">
+                        <div class="item">
+                            <div class="card">
+                                <div class="imagesection">
+                                    <img src="../asset/profile/sparta.png" alt="">
+                                    <div class="mask">
+                                        <div class="textsection">
+                                            <p>What's next?</p>
+                                            <p>?</p>
+                                            <p>20??.?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://seojaeohcode.github.io/portfolioJS/html/index.html" target="_blank">
+                        <div class="item">
+                            <div class="card">
+                                <div class="imagesection">
+                                    <img src="../asset/project/book&lecture/seojaeoh__1_-removebg-preview-removebg-preview.png" alt="">
+                                    <div class="mask">
+                                        <div class="textsection">
+                                            <p id="bookText">書標</p>
+                                            <p>Html,Css,Js,Jquery</p>
+                                            <p>2022.08</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="row">
                     <a href="https://seojaeohcode.github.io/portfolioHtml/html/index.html" target="_blank">
                         <div class="item">
                             <div class="card">
